<resources>
    <string name="app_name">WalletShare</string>
    <string name="welcome">Welcome to WalletShare</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forget_pass"><u>Forgot password?</u></string>
    <string name="or_log_in_with">OR LOG IN WITH:</string>
    <string name="or_sign_up_with">OR SIGN UP WITH:</string>
    <string name="password_validation">*it must contain 8–12 characters</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">GENERAL</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="required">Required</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="more_detail">MORE DETAIL</string>
    <string name="payee">Payee</string>
    <string name="add_note">Add note</string>
    <string name="note">Note</string>
    <string name="enter_payee">Enter Payee</string>
    <string name="payment_type">Payment type</string>
    <string name="cash">CASH</string>
    <string name="save">Save</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="select_a_category">Select a category</string>
    <string name="date_required">Date is required</string>
    <string name="time_required">Time is required</string>


    // Do not delete.. its for facebook login
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="balance">Balance</string>
    <string name="last_records">Last Records</string>
    <string name="see_more">See More</string>
    <string name="payment">Payment</string>
    <string name="title_activity_bottom_nav">bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="top_expenses">Top Expenses</string>
    <string name="records">Records</string>
    <string name="my_profile">My Profile</string>
    <string name="friend">Friends</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="addGroup">AddGroup</string>
    <string name="add_group">Group Name</string>
    <string name="spending">Spendings</string>
    <string name="update_profile_information">Update profile information</string>
    <string name="update">Update</string>
    <string name="spending">Spendings</string>
    <string name="update_profile_information">Update profile information</string>
    <string name="update">Update</string>


</resources>